<resources>
    <string name="splash_screen_text">Shopping made easy!</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="wishlist">Wishlist</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_image">Category image</string>
    <string name="recommended">Recommended</string>
    <string name="filter">Filter</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="remove_from_bag">Remove from bag</string>
    <string name="product_code">Product code</string>
    <string name="brand">Brand</string>
    <string name="description">Description</string>
    <string name="condition">Condition</string>
    <string name="no_products_for_this_category">No products for this category</string>
    <string name="mkd">MKD</string>
    <string name="size_available">Size available:</string>
    <string name="apply">Apply</string>
    <string name="price">Price</string>
    <string name="move_to_bag">Move to bag</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear">Clear all</string>
    <string name="search_history_is_empty">Search history is empty</string>

    <string name="facebook_app_id">280907937239903</string>
    <string name="fb_login_protocol_scheme">fb280907937239903</string>
    <string name="or_join_with">Or join with</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login_prompt_message">To proceed with this action you need to login.</string>
    <string name="login_go_to_message">Go to login/register screen</string>

    <string name="google_server_token_id">
        647139029513-qf8epdfrqckkrrhprvh8ni95m9mh7ka3.apps.googleusercontent.com
    </string>
    <string name="it_seems_that_you_are_not_logged_in">It seems that you are not logged in.</string>
    <string name="price_default_string">950 MKD</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="wifi_off_message">You\'re wifi connection is off</string>
    <string name="you_don_t_have_any_products_in_the_shopping_cart_currently">You don\'t have any products in the shopping cart currently</string>
    <string name="you_don_t_have_active_shopping_cart">You don\'t have active shopping bag.</string>
    <string name="create_shopping_bag">Create shopping bag</string>
    <string name="shopping_cart_info">Shopping Cart Info</string>
    <string name="more">MORE</string>
    <string name="okay">OKAY</string>
    <string name="created">Created:</string>
    <string name="ended">Ended:</string>
    <string name="cart_status">Cart Status:</string>
    <string name="log_out">LOG OUT</string>
    <string name="shop">Shop</string>
    <string name="phone_number">Phone number</string>
    <string name="update">Update</string>
    <string name="default_address">Default</string>
    <string name="add">Add</string>
    <string name="street">Street*</string>
    <string name="street_no">Street no.</string>
    <string name="city">City*</string>
    <string name="country">Country*</string>
    <string name="postal_code">Postal code*</string>
    <string name="save">Save</string>
    <string name="make_default">Make Default</string>
    <string name="no_addresses_found_in_your_address_book">No addresses found in your address book. Please add some</string>
    <string name="no_products_found_for_this_category">No products found</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="all">All</string>
    <string name="size">Size</string>
    <string name="quantity">Qty</string>
    <string name="shopping_bag_empty">Shopping bag empty</string>
    <string name="order_history">Order history</string>
    <string name="place_order">Place order</string>
    <string name="user_info">User info</string>
    <string name="shipping_address">Shipping address</string>
    <string name="change">Change</string>
    <string name="please_choose_default_address">Please choose default address</string>
    <string name="it_s_delivered">It\'s delivered!</string>
    <string name="view">View</string>
    <string name="you_haven_t_ordered_items_yet">You haven\'t ordered items yet</string>
    <string name="delivery_address">Delivery address</string>
    <string name="order_total">Order total</string>
    <string name="sub_total">Sub-total</string>
    <string name="delivery">Delivery</string>
    <string name="free">FREE</string>
    <string name="size_dots">Size:</string>
    <string name="qty">Qty:</string>
    <string name="leave_review">Leave review</string>
    <string name="how_satisfied_are_you_with_our_product">How satisfied are you with our product?</string>
    <string name="tell_us_more">Tell us more</string>


    <string-array name="sorting_products">
        <item>Recommended</item>
        <item>Price - Low to High</item>
        <item>Price - High to Low</item>
    </string-array>
</resources>