<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.orderhistory.reviewproduct.ReviewProductFragment">

    <TextView
        android:id="@+id/howSatified_textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/how_satisfied_are_you_with_our_product" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progressTint="@color/black"
        android:rating="0"
        android:stepSize="1"
        app:layout_constraintStart_toStartOf="@+id/howSatified_textView"
        app:layout_constraintTop_toBottomOf="@id/howSatified_textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/review_inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tell_us_more"
        app:boxStrokeColor="@color/black"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:hintTextColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/ratingBar"
        app:layout_constraintTop_toBottomOf="@id/ratingBar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/review_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/review_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/leave_review"
        app:layout_constraintStart_toStartOf="@id/review_inputLayout"
        app:layout_constraintTop_toBottomOf="@id/review_inputLayout"
        tools:text="Review product" />

</androidx.constraintlayout.widget.ConstraintLayout>