<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.shoppingbag.ShoppingBagFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/checkout_constraintLayout"
        android:layout_width="0dp"
        android:elevation="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/textView_totalCostLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/total"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/shadowView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/totalCost_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_default_string"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_totalCostLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_totalCostLabel" />

        <View
            android:id="@+id/shadowView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toTopOf="@id/checkout_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/light_gray"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            app:icon="@drawable/ic_pay"
            app:iconGravity="textStart"
            android:backgroundTint="@color/green"
            android:drawableTint="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>