<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="validator"
            type="mk.ukim.finki.eshop.ui.account.register.RegisterFormValidator" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.account.register.RegisterFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            errorMessage="@{validator.nameValidator.error}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textCursorDrawable="@null"
                android:text="@{validator.nameLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surname_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="8dp"
            android:hint="@string/surname"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            errorMessage="@{validator.surnameValidator.error}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_inputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textCursorDrawable="@null"
                app:errorEnabled="true"
                android:text="@{validator.surnameLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="8dp"
            android:hint="@string/username"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            errorMessage="@{validator.usernameValidator.error}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surname_inputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:drawableStart="@drawable/custom_user_icon"
                android:drawablePadding="12dp"
                android:text="@{validator.usernameLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="8dp"
            android:hint="@string/email_address"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            errorMessage="@{validator.emailValidator.error}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_inputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@null"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawablePadding="12dp"
                android:text="@{validator.emailLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            errorMessage="@{validator.passwordValidator.error}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_inputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:drawableStart="@drawable/custom_password_icon"
                android:drawablePadding="12dp"
                android:text="@{validator.passwordLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            app:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_inputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>