<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="validator"
            type="mk.ukim.finki.eshop.ui.addressbook.enteraddress.EnterAddressFormValidator" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addressbook.enteraddress.EnterAddressFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/street_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="32dp"
            android:hint="@string/street"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            errorMessage="@{validator.streetValidator.error}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/street_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                android:text="@{validator.streetLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/streetNo_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="16dp"
            android:hint="@string/street_no"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/street_inputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/streetNo_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                android:text="@{validator.streetNumberLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="16dp"
            android:hint="@string/city"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            errorMessage="@{validator.cityValidator.error}"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/streetNo_inputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                android:text="@{validator.cityLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/country_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="16dp"
            android:hint="@string/country"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            errorMessage="@{validator.countryValidator.error}"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_inputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/country_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textCursorDrawable="@null"
                android:text="@{validator.countryLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postalCode_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="16dp"
            android:hint="@string/postal_code"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            errorMessage="@{validator.postalCodeValidator.error}"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_inputLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postalCode_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:textCursorDrawable="@null"
                android:text="@{validator.postalCodeLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/makeDefault_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            tools:text="Make Default"
            android:text="@string/make_default"
            app:layout_constraintTop_toBottomOf="@id/postalCode_inputLayout"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/default_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackTint="@color/black"
            android:checked="@{validator.isDefaultLiveData}"
            app:layout_constraintTop_toTopOf="@id/makeDefault_textView"
            app:layout_constraintBottom_toBottomOf="@id/makeDefault_textView"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/makeDefault_textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>